Bug 1162990 - Add POINTER_LEAVE on captured element on e10s. r=smaug